<resources>
    <string name="app_name">Soli Catering</string>
    <!-- Menu title -->
    <string name="title_home" translatable="false">Accueil</string>
    <string name="title_menu" translatable="false">Menus</string>
    <string name="title_Historique" translatable="false">Catering</string>
    <string name="title_panier" translatable="false">Panier</string>
    <string name="title_categorie" translatable="false">Categories</string>
    <string name="title_plat" translatable="false">Plats</string>



    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <!-- Message d'erreur-->
    <!-- Message de conformation-->
    <!-- desciption-->
    <string name="description_projet_petite" translatable="false">Soli Catering est un projet de Living Room. Il regroupe plusieurs chefs expirimenté de tous les continent, à fin...</string>
    <!-- buttonAnnuler-->
    <string name="bt_valider_cmd_0_article" translatable="false">Aucun article ajouté</string>
    <string name="bt_valider_cmd" translatable="false">Valider la commande</string>

    <!-- shared preferences-->
    <string name="conteur_file_name" translatable="false">website.livingRoom.marokkanischbernesse.PREFERENCE_FILE_KEY_CONTEUR</string>

    <!-- label-->
    <string name="label_nom">Nom</string>
    <string name="label_prenom">Prénom</string>
    <string name="label_rue">Rue</string>
    <string name="label_numero_rue">Numero</string>
    <string name="label_code_postal">Code postal</string>
    <string name="label_ville">Ville</string>
    <string name="label_email">E-Mail</string>
    <string name="label_tel">Téléphone</string>
    <string name="label_date_livraison">Date de Livraison</string>
    <string name="label_heure_livraison">Heure</string>
    <string name="label_remarque">Remarque</string>
    <string name="label_nombre">Nombre</string>

    <string name="validation_en_cours_label" translatable="false">valadiation\nen cours</string>
    <string name="prise_en_charge_label" translatable="false">prise en\ncharge</string>
    <string name="preparation_en_cours_label" translatable="false">Preparation\nen cour</string>
    <string name="catering_livrer_label" translatable="false">Catering\nlivré</string>
    <string name="erreur_nom" translatable="false">- veuillez saisir un nom valide</string>
    <string name="erreur_prenom" translatable="false">- veuillez saisir un prénom valide</string>
    <string name="erreur_rue" translatable="false">- veuillez saisir un nom de rue valid</string>
    <string name="erreur_numero_rue" translatable="false">- veuillez saisir un numéro de rue valide</string>
    <string name="erreur_code_postal" translatable="false">- veuillez saisir un code postal valide</string>
    <string name="erreur_ville" translatable="false">- veuillez saisir un nom de ville valide</string>
    <string name="erreur_email" translatable="false">- veuillez saisir un email valide (exemple@gmail.com)</string>
    <string name="erreur_tel" translatable="false">- veuillez saisir un numéro de télephone suisse valide</string>
    <string name="erreur_date" translatable="false">- veuillez saisir une date valide (DD/MM/YYYY)</string>
    <string name="erreur_heure" translatable="false">- veuillez saisir une heure valide (HH:MM)</string>
    <string name="erreur_remarque" translatable="false">- veuillez saisir un text qui ne dépasse pas 500 caractéres</string>
    <string name="erreur_nombre" translatable="false">- veuillez saisir un nombre entre 30 et 999</string>
    <string name="text_point" translatable="false">P</string>
    <string name="text_titre_catering" translatable="false">SoliCatering du </string>
    <string name="text_devise" translatable="false">CHF</string>
    <string name="label_point_restant" translatable="false">"Point restant: "</string>
    <string name="description_image_view_plus" translatable="false">augmenter le nombre de plats</string>
    <string name="description_image_view_moin" translatable="false">diminuer le nombre de plats</string>
    <string name="description_image_view_event_principal" translatable="false">image view event principal</string>
    <string name="description_image_view_plat" translatable="false">photo réelle du plat</string>
    <string name="description_image_view_menu" translatable="false">photo lustration du menu</string>
    <string name="description_image_view_trait_vertical" translatable="false">trait vertical pour séparation</string>
    <string name="description_image_view_trait_horizontal" translatable="false">trait horizontal pour séparation</string>
    <string name="description_image_view_fermer" translatable="false">button pour cloturer le dialog</string>
    <string name="description_image_view_information_livraison" translatable="false">icon information livraison</string>
    <string name="description_image_view_information_contact" translatable="false">icon information contact</string>
    <string name="description_image_view_vegi" translatable="false">icon indique si le plat est vegan</string>
    <string name="description_image_view_categorie" translatable="false">photo lustration categorie</string>
    <string name="description_image_view_check_box" translatable="false">icon check box ilustre l\'etat d\'avancement</string>
    <string name="description_image_view_logo_soli_catering" translatable="false">logo du projet soli catering</string>




    <string name="button_commander" translatable="false">Passez une commande</string>
    <string name="label_prix_par_personne" translatable="false">Prix par personne : </string>
    <string name="label_nombre_de_point_de_credit" translatable="false">Nombre de point de credit</string>
    <string name="label_prix_du_catering" translatable="false">Prix du catering</string>
    <string name="label_nombre_de_personnes" translatable="false">Nombre de personnes : </string>
    <string name="label_prix_total" translatable="false">Prix total :</string>
    <string name="label_information_livraison" translatable="false">Information livraison</string>
    <string name="label_contenu_du_menu" translatable="false">Contenu du menu</string>
    <string name="label_suivie_de_commande" translatable="false">Suivie de commande</string>
    <string name="label_renseigner_info_livraison" translatable="false">• Veuillez renseigner les informations pour la livraison</string>
    <string name="label_information_de_contact" translatable="false">Information de Contact</string>
    <string name="label_information_de_livraison" translatable="false">Information de livraison</string>
    <string name="bt_valider" translatable="false">Valider</string>
    <string name="label_0" translatable="false">0</string>
    <string name="bt_ajouter" translatable="false">Ajouter</string>
    <string name="bt_annuller" translatable="false">annuller</string>
    <string name="titre_du_menu" translatable="false">Titre du menu</string>
    <string name="zero_point" translatable="false">0 p</string>
    <string name="zero" translatable="false">0</string>
    <string name="titre_plat" translatable="false">Titre plat</string>
    <string name="description" translatable="false">description</string>
    <string name="titre_de_la_cat_gorie" translatable="false">Titre de la catégorie</string>
    <string name="description_de_la_categorie" translatable="false">description de la categorie</string>
    <string name="contenu_1" translatable="false">contenu 1</string>
    <string name="contenu_2" translatable="false">contenu 2</string>
    <string name="contenu_3" translatable="false">contenu 3</string>
    <string name="trois_point" translatable="false">....</string>
    <string name="titre_de_l_evenement" translatable="false">Titre de l\'evenement</string>
    <string name="date" translatable="false">00:00:0000</string>
    <string name="titre_menu" translatable="false">Titre Menu</string>
    <string name="description_menu" translatable="false">description menu</string>
    <string name="zero_devise" translatable="false">00 CHF</string>
    <string name="temps_necessaire" translatable="false">*temps necessaire</string>
    <string name="titre_catering" translatable="false">Titre Catering</string>
    <string name="etat_d_avancement" translatable="false">Etat d\'avancement</string>
    <string name="nom_prenom" translatable="false">Nom Prenom</string>
    <string name="adresse_complete" translatable="false">Adresse Complete</string>
    <string name="information_livraion" translatable="false">Information livraion</string>
    <string name="bt_valider_la_commande" translatable="false">Valider la commande</string>
    <string name="title_dialog_plat" translatable="false">DialogPlat</string>
    <string name="title_dialog_client" translatable="false">view_client</string>
    <string name="url_image_picasso" translatable="false">https://192.168.1.25/solicatering/</string>
    <string name="text_aucun_menu">Aucun menu</string>


</resources>