<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">
    <!-- aceuille -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="website.livingRoom.soliCatering.view.acceuil.AccueilFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_acceuil">
        <action
            android:id="@+id/action_navigation_home_to_navigation_commande"
            app:destination="@id/navigation_menu"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
    <!-- menu -->
    <fragment
        android:id="@+id/navigation_menu"
        android:name="website.livingRoom.soliCatering.view.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_navigation_menu_to_navigation_categorie"
            app:destination="@id/navigation_categorie"
            app:popUpTo="@id/navigation_menu"
            app:popUpToInclusive="true" />
    </fragment>
    <!-- categorie -->
    <fragment
        android:id="@+id/navigation_categorie"
        android:name="website.livingRoom.soliCatering.view.categorie.CategorieFragment"
        android:label="@string/title_categorie"
        tools:layout="@layout/fragment_categorie">
        <action
            android:id="@+id/action_navigation_categorie_to_navigation_plat"
            app:destination="@id/navigation_plat"
            app:popUpToInclusive="false" />
    </fragment>
    <!-- plat -->
    <fragment
        android:id="@+id/navigation_plat"
        android:name="website.livingRoom.soliCatering.view.plat.PlatFragment"
        android:label="@string/titre_plat"
        tools:layout="@layout/fragment_plat">
    </fragment>
    <!-- panier -->
    <fragment
        android:id="@+id/navigation_panier"
        android:name="website.livingRoom.soliCatering.view.panier.PanierFragment"
        android:label="@string/title_panier"
        tools:layout="@layout/fragment_panier">

    </fragment>
    <!-- dialog plat -->
    <dialog
        android:id="@+id/dialogPlat"
        android:name="website.livingRoom.soliCatering.view.plat.DialogPlatFragment"
        android:label="@string/title_dialog_plat"
        tools:layout="@layout/view_plats">
        <action
            android:id="@+id/action_dialogPlat_to_navigation_panier"
            app:destination="@id/navigation_panier"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_dialogPlat_to_navigation_categorie"
            app:popUpTo="@id/navigation_categorie"
            app:popUpToInclusive="true"
            app:destination="@id/navigation_categorie" />

    </dialog>
    <dialog
        android:id="@+id/dialogClient"
        android:name="website.livingRoom.soliCatering.view.client.DialogClientFragment"
        android:label="@string/title_dialog_client"
        tools:layout="@layout/view_client">
        <action
            android:id="@+id/action_dialogClient_to_historiqueFragment"
            app:destination="@id/navigation_historique" />
    </dialog>
    <fragment
        android:id="@+id/navigation_historique"
        android:name="website.livingRoom.soliCatering.view.historique.HistoriqueFragment"
        android:label="@string/title_Historique"
        tools:layout="@layout/fragment_historique" />

</navigation>