<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--view model client-->
        <variable
            name="viewModel"
            type="website.livingRoom.soliCatering.viewModel.ClientViewModel" />

    </data>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewViewClient"
            style="@style/WidthHeightParent"
            android:layout_margin="@dimen/small_margin"
            app:cardElevation="@dimen/small_margin">

            <ScrollView
                style="@style/WidthHeightParent">

                <LinearLayout
                    style="@style/WidthHeightParent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayoutClient"
                        style="@style/WidthHeightParent"
                        android:padding="@dimen/medium_margin">

                        <!--titre informatife-->
                        <androidx.constraintlayout.utils.widget.MockView
                            android:id="@+id/mockViewFormClient"
                            style="@style/mockViewForm"
                            android:visibility="invisible"
                            tools:ignore="MissingConstraints"
                            tools:layout_editor_absoluteX="10dp"
                            tools:layout_editor_absoluteY="10dp" />

                        <TextView
                            android:id="@+id/textViewTitre"
                            style="@style/textViewBase1.GrisPrincipal.Small.Bold"


                            android:text="@string/label_renseigner_info_livraison"

                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                        <!--image button close-->
                        <ImageView
                            android:id="@+id/imageViewClose"
                            style="@style/ImageViewXSmall"
                            android:padding="@dimen/small_margin"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/icon_cancel"
                            android:contentDescription="@string/description_image_view_fermer" />

                        <!--icon information contact-->
                        <ImageView
                            android:id="@+id/ImageViewiconContact"
                            style="@style/ImageViewXXSmall"

                            app:layout_constraintBottom_toBottomOf="@+id/textViewContactLabel"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/textViewContactLabel"
                            app:srcCompat="@drawable/contact_icon"
                            android:contentDescription="@string/description_image_view_information_contact" />

                        <!--label information de contact-->
                        <TextView
                            android:id="@+id/textViewContactLabel"
                            style="@style/textViewBase1.GrisPrincipal.Adaptable"

                            android:text="@string/label_information_de_contact"

                            android:layout_marginStart="@dimen/medium_margin"
                            android:layout_marginTop="@dimen/medium_margin"
                            app:layout_constraintStart_toEndOf="@+id/ImageViewiconContact"
                            app:layout_constraintTop_toBottomOf="@+id/textViewTitre" />
                        <!--nom-->

                        <EditText
                            android:id="@+id/editTextNom"
                            style="@style/EditeTextFormulaire"

                            android:hint="@string/label_nom"
                            android:inputType="textPersonName"
                            android:text="@={viewModel.client.nom}"

                            android:ems="9"
                            android:nextFocusDown="@id/editTextPrenom"
                            android:layout_marginTop="@dimen/medium_margin"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textViewContactLabel"
                            android:autofillHints="" />

                        <!--prenom-->
                        <EditText
                            android:id="@+id/editTextPrenom"
                            style="@style/EditeTextFormulaire"

                            android:hint="@string/label_prenom"
                            android:inputType="textPersonName"
                            android:text="@={viewModel.client.prenom}"

                            android:nextFocusDown="@id/editTextPhone"
                            android:layout_marginStart="@dimen/medium_margin"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/editTextNom"
                            app:layout_constraintTop_toTopOf="@+id/editTextNom"
                            android:autofillHints="" />

                        <!--phone-->
                        <EditText
                            android:id="@+id/editTextPhone"
                            style="@style/EditeTextFormulaire"

                            android:hint="@string/label_tel"
                            android:inputType="phone"
                            android:text="@={viewModel.client.numTel}"

                            android:ems="7"
                            android:nextFocusDown="@id/editTextEmail"
                            android:layout_marginTop="@dimen/medium_margin"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editTextNom"
                            android:autofillHints="" />

                        <!--email-->
                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/EditeTextFormulaire"

                            android:hint="@string/label_email"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.client.email}"

                            android:ems="14"
                            android:nextFocusDown="@id/editTextRue"
                            android:layout_marginStart="@dimen/medium_margin"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/editTextPhone"
                            app:layout_constraintTop_toBottomOf="@+id/editTextPrenom"
                            app:layout_constraintTop_toTopOf="@+id/editTextPhone"
                            android:autofillHints="" />

                        <!--icon information livraison-->
                        <ImageView
                            android:id="@+id/imageViewIconLivraison"

                            style="@style/ImageViewXXSmall"

                            app:layout_constraintBottom_toBottomOf="@+id/textViewLivraisonLabel"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/textViewLivraisonLabel"
                            app:srcCompat="@drawable/delivery_icon"
                            android:contentDescription="@string/description_image_view_information_livraison" />

                        <!--label information de livraison -->
                        <TextView
                            android:id="@+id/textViewLivraisonLabel"
                            style="@style/textViewBase1.GrisPrincipal.Adaptable"

                            android:text="@string/label_information_de_livraison"

                            android:layout_marginStart="@dimen/medium_margin"
                            android:layout_marginTop="@dimen/large_margin"
                            app:layout_constraintStart_toEndOf="@+id/imageViewIconLivraison"
                            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

                        <!--rue-->
                        <EditText
                            android:id="@+id/editTextRue"
                            style="@style/EditeTextFormulaire"

                            android:hint="@string/label_rue"
                            android:inputType="textPostalAddress"
                            android:text="@={viewModel.informationLivraison.adresse.rue}"

                            android:nextFocusDown="@id/editTextNumRue"
                            android:ems="10"
                            android:layout_marginTop="@dimen/medium_margin"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textViewLivraisonLabel"
                            android:autofillHints="" />

                        <!--numero de rue-->
                        <EditText
                            android:id="@+id/editTextNumRue"
                            style="@style/EditeTextFormulaire"

                            android:hint="@string/label_numero_rue"
                            android:inputType="numberDecimal"
                            android:text="@={viewModel.informationLivraison.adresse.numeroRueString}"

                            android:nextFocusDown="@id/editTextCodePostal"
                            android:ems="5"
                            android:layout_marginStart="@dimen/medium_margin"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/editTextRue"
                            app:layout_constraintTop_toTopOf="@+id/editTextRue"
                            android:autofillHints="" />

                        <!--code postal-->

                        <EditText
                            android:id="@+id/editTextCodePostal"
                            style="@style/EditeTextFormulaire"

                            android:hint="@string/label_code_postal"
                            android:inputType="numberSigned"
                            android:text="@={viewModel.informationLivraison.adresse.codePostalString}"

                            android:ems="6"
                            android:nextFocusDown="@id/editTextVille"
                            android:layout_marginTop="@dimen/medium_margin"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editTextRue"
                            android:autofillHints="" />

                        <!--ville-->
                        <EditText
                            android:id="@+id/editTextVille"
                            style="@style/EditeTextFormulaire"

                            android:hint="@string/label_ville"
                            android:inputType="textAutoCorrect|textPostalAddress"
                            android:text="@={viewModel.informationLivraison.adresse.ville}"

                            android:ems="14"
                            android:nextFocusDown="@id/editTextDate"
                            android:layout_marginStart="@dimen/medium_margin"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/editTextCodePostal"
                            app:layout_constraintTop_toTopOf="@+id/editTextCodePostal"
                            android:autofillHints="" />

                        <!--date-->
                        <EditText
                            android:id="@+id/editTextDate"
                            style="@style/EditeTextFormulaire"

                            android:hint="@string/label_date_livraison"
                            android:inputType="date"
                            android:text="@={viewModel.informationLivraison.dateLivr}"

                            android:ems="10"
                            android:nextFocusDown="@id/editTextTime"
                            android:layout_marginTop="@dimen/medium_margin"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editTextCodePostal"
                            android:autofillHints="" />

                        <!--time-->
                        <EditText
                            android:id="@+id/editTextTime"
                            style="@style/EditeTextFormulaire"

                            android:hint="@string/label_heure_livraison"
                            android:inputType="time"
                            android:text="@={viewModel.informationLivraison.heurLivr}"

                            android:ems="8"
                            android:nextFocusDown="@id/editTextRemarque"
                            android:layout_marginStart="@dimen/medium_margin"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/editTextDate"
                            app:layout_constraintTop_toTopOf="@+id/editTextDate"
                            android:autofillHints="" />

                        <!--remarque-->
                        <EditText
                            android:id="@+id/editTextRemarque"
                            style="@style/EditeTextFormulaire"


                            android:layout_width="0dp"
                            android:layout_height="@dimen/small_image_size"
                            android:layout_marginTop="@dimen/medium_margin"

                            android:autofillHints=""
                            android:gravity="top"
                            android:hint="@string/label_remarque"
                            android:inputType="textMultiLine|textAutoCorrect"
                            android:nextFocusDown="@id/editTextNombre"
                            android:paddingTop="@dimen/small_margin"
                            android:text="@={viewModel.informationLivraison.remarque}"
                            app:layout_constraintEnd_toEndOf="@+id/editTextTime"
                            app:layout_constraintStart_toStartOf="@+id/editTextDate"
                            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

                        <!--label nombre-->
                        <TextView
                            android:id="@+id/textViewNombreLabel"
                            style="@style/EditeTextFormulaire"
                            android:labelFor="@+id/editTextNombre"
                            android:background="@color/white_100"

                            android:text="@string/label_nombre"
                            android:layout_marginTop="@dimen/large_margin"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/editTextNombre"
                            app:layout_constraintTop_toBottomOf="@+id/textViewError" />

                        <!--nombre-->
                        <EditText
                            android:id="@+id/editTextNombre"
                            style="@style/EditeTextFormulaire"

                            android:hint="@string/label_0"
                            android:inputType="numberDecimal"
                            android:text="@={viewModel.informationLivraison.nombreString}"
                            android:textAlignment="center"

                            android:ems="3"
                            android:nextFocusDown="@id/buttonValider"
                            android:layout_marginEnd="@dimen/medium_margin"
                            app:layout_constraintBottom_toBottomOf="@+id/textViewNombreLabel"
                            app:layout_constraintEnd_toStartOf="@+id/buttonValider"
                            app:layout_constraintTop_toTopOf="@+id/textViewNombreLabel"
                            android:autofillHints="" />

                        <!--button valider-->
                        <Button
                            android:id="@+id/buttonValider"
                            style="@style/Button"
                            android:layout_width="wrap_content"

                            android:text="@string/bt_valider"

                            android:textColor="@color/green_100"
                            app:layout_constraintBottom_toBottomOf="@+id/editTextNombre"
                            app:layout_constraintEnd_toEndOf="@+id/editTextRemarque"
                            app:layout_constraintTop_toTopOf="@+id/editTextNombre" />

                        <!--erreur-->
                        <TextView
                            android:id="@+id/textViewError"
                            style="@style/textViewBase1.Rouge.XSmall.adaptable"

                            android:text="@{viewModel.client.errorMessage}"
                            android:visibility="@{viewModel.client.visibilityError}"

                            android:singleLine="false"
                            android:layout_marginTop="@dimen/medium_margin"
                            app:layout_constraintEnd_toEndOf="@+id/editTextRemarque"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editTextRemarque" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </ScrollView>

        </androidx.cardview.widget.CardView>


</layout>