<?xml version="1.0" encoding="utf-8" ?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--categorie object for data binding-->
    <data>

        <variable
            name="categorie"
            type="website.livingRoom.soliCatering.model.entitys.Categorie" />
    </data>

    <LinearLayout
        android:id="@+id/linearLayoutCategorie"
        style="@style/LinearLayoutPrincipaleFullWidthBlanc">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCategorie"
            style="@style/cardViewPrincipalRVBlanc.Full">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutCategorie"
                style="@style/ConstraintLayoutShapeBackGround"
                android:padding="0dp">

                <androidx.constraintlayout.utils.widget.MockView
                    android:id="@+id/mockViewFormCategorie"
                    style="@style/mockViewForm"
                    tools:ignore="MissingConstraints" />
                <!--image view categorie-->
                <ImageView
                    android:id="@+id/imageViewCat"
                    style="@style/ImageViewLarge"

                    android:contentDescription="@string/description_image_view_categorie"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/backdescriptionplat"
                    tools:ignore="MissingConstraints" />

                <!--text view titre-->
                <TextView
                    android:id="@+id/textViewNomCat"

                    style="@style/textViewBase1.GrisPrincipal.Adaptable.Bold"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:hint="@string/titre_de_la_cat_gorie"

                    android:text="@{categorie.nom}"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toEndOf="@+id/imageViewCat"
                    app:layout_constraintTop_toTopOf="@+id/imageViewCat" />

                <!--text view description-->
                <TextView
                    android:id="@+id/textViewDiscriptionCat"

                    style="@style/textViewBase1.GrisPrincipal.Small.Adaptable"

                    android:hint="@string/description_de_la_categorie"
                    android:text="@{categorie.discription}"
                    android:textAlignment="textStart"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textViewNomCat"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNomCat" />

                <!--text view contenu 1-->

                <!--text view contenu 2-->

                <!--text view contenu 3-->

                <!--text view contenu 3 points-->

                <!--text view points-->
                <TextView
                    android:id="@+id/textViewPointCat"
                    style="@style/textViewBase1.Vert.Small.Bold"

                    android:text="@{categorie.pointFormat}"
                    android:hint="@string/zero_point"
                    android:textAlignment="textStart"
                    android:textStyle="bold"

                    android:layout_marginEnd="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>